# OpenMeta-c

./: .gitignore  CMakeLists.txt  README.md  SECURITY_REVIEW.md
src/: CMakeLists.txt
src/base/: omc_arena.c
src/core/: omc_edit.c  omc_key.c  omc_store.c  omc_val.c
src/edit/: omc_exif_write.c  omc_exif_write.h  omc_transfer.c  omc_transfer_persist.c  omc_xmp_apply.c  omc_xmp_dump.c  omc_xmp_embed.c  omc_xmp_write.c
src/omc/: omc_arena.h  omc_base.h  omc_bmff.h  omc_ccm_query.h  omc_cfg.h.in  omc_edit.h  omc_exif.h  omc_exif_name.h  omc_exr.h  omc_icc.h  omc_iptc.h  omc_irb.h  omc_jumbf.h  omc_jxl_encoder_handoff.h  omc_key.h  omc_pay.h  omc_preview.h  omc_read.h  omc_scan.h  omc_span.h  omc_status.h  omc_store.h  omc_transfer.h  omc_transfer_artifact.h  omc_transfer_package.h  omc_transfer_payload.h  omc_transfer_persist.h  omc_types.h  omc_val.h  omc_validate.h  omc_xmp.h  omc_xmp_apply.h  omc_xmp_dump.h  omc_xmp_embed.h  omc_xmp_write.h
src/read/: omc_bmff.c  omc_ccm_query.c  omc_ciff.c  omc_ciff.h  omc_exif.c  omc_exif_name.c  omc_exr.c  omc_icc.c  omc_iptc.c  omc_irb.c  omc_jumbf.c  omc_pay.c  omc_preview.c  omc_read.c  omc_scan.c  omc_validate.c  omc_xmp.c
tests/: CMakeLists.txt  omc_test_assert.h  test_omc_ccm_query.c  test_omc_edit.c  test_omc_exif.c  test_omc_exif_name.c  test_omc_exr.c  test_omc_icc.c  test_omc_iptc.c  test_omc_irb.c  test_omc_jumbf.c  test_omc_jxl_encoder_handoff.c  test_omc_parity.cc  test_omc_pay.c  test_omc_preview.c  test_omc_read.c  test_omc_scan.c  test_omc_store.c  test_omc_transfer.c  test_omc_transfer_artifact.c  test_omc_transfer_package.c  test_omc_transfer_payload.c  test_omc_transfer_persist.c  test_omc_validate.c  test_omc_xmp.c  test_omc_xmp_apply.c  test_omc_xmp_dump.c  test_omc_xmp_embed.c  test_omc_xmp_write.c
